add links in HTML file

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                   </div>
                 </div>End testimonial item
 
-                 <!-- <div class="swiper-slide"> -->
+                 <div class="swiper-slide"> -->
                   <!-- <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
@@ -606,7 +606,7 @@
                 </div>
                 <h3 class="card-title"><a href="https://www.webmd.com/fitness-exercise/ss/twelve-habits-super-healthy-people">Build Healthy Habits</a></h3>
                 <p class="card-description">
-                  Eat fruits and vegetables. They have a lot of   vitamins and minerals, so when eating these colorful fruits and vegetables everyone gets strong and healthy.
+                  Eat fruits and vegetables. They have a lot of   vitamins and minerals, so everyone gets strong and healthy.
                 </p>
               </div>
               <div class="card-footer">
