--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -19,14 +19,11 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!--   Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
    =======================================================
-  * Template Name: DevFolio - v4.9.1
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+   
   ======================================================== 
 </head>
 
