Nav bar updated

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+          <li><a class="nav-link scrollto " href="#blog">Hobbies</a></li>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> -->
+            <!-- <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -62,7 +62,7 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -199,7 +199,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  The website is responsive on PC, tablet, cellphone using bootstrap, js, and other libraries.
+                  The website is responsive on PC, tablet, phone using bootstrap, and js.
                 </p>
               </div>
             </div>
@@ -251,7 +251,7 @@
               <div class="service-content">
                 <h2 class="s-title">Marketing Services</h2>
                 <p class="s-description text-center">
-                  Good team player, interested to help each other to make changes,  and max productivity.
+                  Good team player, interested to help others to make changes,  and max productivity.
                 </p>
               </div>
             </div>
